# projectFOUNDATION

./: .gitignore  Cargo.toml  LICENSE-CC-BY-SA  LICENSE-ORC  README.md
.github/workflows/: ci.yml  notify-sporeprint.yml
benchmarks/barracuda_cpu_parity/: README.md  common.py  linalg_solve.py  linalg_solve_results.json  matmul.py  matmul_results.json  md_velocity_verlet.py  md_velocity_verlet_results.json  requirements.txt  spectral_eigenvalues.py  spectral_eigenvalues_results.json  stats_mean.py  stats_mean_results.json  stats_variance.py  stats_variance_results.json
crates/foundation-cli/: Cargo.toml
crates/foundation-cli/src/: commands.rs  main.rs
crates/foundation-core/: Cargo.toml
crates/foundation-core/src/: config.rs  env_keys.rs  error.rs  lib.rs  paths.rs  primal_names.rs  source.rs  target.rs  thread.rs  time.rs  versions.rs  workload.rs
crates/foundation-fetch/: Cargo.toml
crates/foundation-fetch/src/: fetcher.rs  hasher.rs  lib.rs  registry.rs
crates/foundation-ipc/: Cargo.toml
crates/foundation-ipc/src/: client.rs  dashboard.rs  error.rs  health.rs  lib.rs  methods.rs  protocol.rs  provenance.rs  transport.rs
crates/foundation-ipc/tests/: mock_server.rs
crates/foundation-publish/: Cargo.toml
crates/foundation-publish/src/: domain_profile.rs  gallery.rs  lib.rs  registry.rs  urls.rs
crates/foundation-publish/tests/: integration.rs
crates/foundation-validate/: Cargo.toml
crates/foundation-validate/src/: compare.rs  executor.rs  lib.rs  pipeline.rs  report.rs
crates/foundation-validate/src/phases/: health.rs  mod.rs  provenance.rs
crates/foundation-validate/tests/: pipeline_integration.rs
data/: README.md
data/sources/: BLAKE3_BACKFILL_STATUS.md  thread01_wcm.toml  thread02_plasma.toml  thread03_immuno.toml  thread04_enviro.toml  thread05_ltee.toml  thread06_ag.toml  thread07_anderson.toml  thread08_health.toml  thread10_provenance.toml
data/targets/: README.md  thread01_wcm_targets.toml  thread03_immuno_targets.toml  thread04_enviro_targets.toml  thread05_ltee_targets.toml  thread06_ag_targets.toml  thread08_health_targets.toml  thread09_gaming_targets.toml  thread10_provenance_targets.toml
deploy/: README.md  backfill_hashes.sh  discovery_defaults.toml  fetch_sources.sh  foundation_validate.sh
deploy/lib/: env.sh  json_rpc.sh  primal_ipc.sh  report_writer.sh  target_compare.sh  thread_registry.sh
docs/: BONDING_MODELS.md  FOUNDATION_PRIMER.md  NUCLEUS_PRIMER.md
expressions/: ABG_WHOLE_CELL_REBUILD.md  ENVIRONMENTAL_GENOMICS.md  GAMING_CREATIVE_SCIENCE.md  LTEE_EVOLUTIONARY_DYNAMICS.md  MEASUREMENT_SCIENCE.md  PROVENANCE_ECONOMICS.md  README.md  SOVEREIGN_HEALTH.md
graphs/: README.md  foundation_validation.toml
lineage/: BASECAMP_PAPER_MAP.toml  README.md  SPRING_VERSIONS.toml  THE_UNIFIED_LINEAGE.md  THREAD_INDEX.toml
specs/: DATA_INTEGRITY_CONTRACT.md  EVOLUTION_GAPS.md  EXPRESSION_AUTHORING_GUIDE.md  FOUNDATION_VALIDATE_ELEVATION_REVIEW.md  GUIDESTONE_BOUNDARY_SPEC.md  MESH_VALIDATION_EVALUATION.md  THREAD06_AG_GUIDESTONE_PROPOSAL.md  ag_guidestone_scope.toml
sporeprint/: validation-summary.md
sporeprint/spores/: _index.md  hotspring-compchem-guidestone.md
validation/: COMPOSITION_GAPS.md  README.md
validation/handbacks/: DEEP_AUDIT_FINDINGS_MAY16_2026.md  JUPYTERHUB_PATTERNS_HANDBACK.md  README.md  SECURITY_HANDBACK_MAY06_2026.md  UPSTREAM_AUDIT_PREP_MAY15_2026.md  UPSTREAM_GAPS_HANDBACK_MAY06_2026.md
validation/handbacks/archive/: JUPYTERHUB_PATTERNS_HANDBACK.md  NESTGATE_CONTENT_GAPS_HANDBACK.md  PETALTONGUE_GAPS_HANDBACK.md  PRIMAL_DEEP_DEBT_HANDBACK.md  ROOTPULSE_GAPS_HANDBACK.md  UPSTREAM_AUDIT_PREP_MAY15_2026.md  UPSTREAM_GAPS_HANDBACK_MAY06_2026.md
validation/wcm-20260509/: DATA_BLAKE3_MANIFEST.tsv  PROVENANCE_MANIFEST.md  VALIDATION_SUMMARY.md  wcm-genome-fetch-hash.manual.stdout  wcm-genome-fetch-hash.stdout  wcm-kegg-pathway-check.manual.stdout  wcm-kegg-pathway-check.stdout  wcm-proteome-validation.manual.stdout  wcm-proteome-validation.stdout
workloads/: README.md
workloads/groundspring/: gs-bench-gpu.toml  gs-guidestone.toml  gs-python-baselines.toml  gs-validate-all.toml
workloads/hotspring/: hs-chuna-validation.toml  hs-sarkas-md-validation.toml
workloads/thread01_wcm/: wcm-genome-fetch-hash.toml  wcm-kegg-pathway-check.toml  wcm-proteome-validation.toml
workloads/thread02_plasma/: hs-sarkas-md.toml
workloads/thread03_immuno/: healthspring-ltee-b5.toml  healthspring-pk-validation.toml
workloads/thread04_enviro/: enviro-qs-validation.toml  litho-breseq-integration.toml
workloads/thread05_ltee/: litho-ltee-anderson.toml  litho-ltee-fitness.toml  litho-ltee-mutations.toml
workloads/thread06_ag/: airspring-atlas-pipeline.toml  airspring-et0-fao56.toml  airspring-et0-methods.toml  airspring-full-suite.toml  airspring-soil-physics.toml  airspring-water-balance.toml
workloads/thread07_anderson/: anderson-math-validation.toml  litho-anderson-integration.toml
workloads/thread08_health/: healthspring-full-validation.toml
workloads/thread09_gaming/: ludospring-full-validation.toml  ludospring-interaction-validation.toml
workloads/thread10_provenance/: nucleus-spore-ingest.toml  primalspring-validation.toml
