# SPDX-License-Identifier: AGPL-3.0-or-later
[workspace]
resolver = "2"
members = [
    "crates/foundation-core",
    "crates/foundation-ipc",
    "crates/foundation-fetch",
    "crates/foundation-validate",
    "crates/foundation-cli",
]

[workspace.package]
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoPrimals/projectFOUNDATION"
rust-version = "1.85"

[workspace.dependencies]
blake3 = { version = "1", default-features = false, features = ["std", "pure"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "time", "macros"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ureq = { version = "3", default-features = false }
walkdir = "2"

foundation-core = { path = "crates/foundation-core" }
foundation-ipc = { path = "crates/foundation-ipc" }
foundation-fetch = { path = "crates/foundation-fetch" }
foundation-validate = { path = "crates/foundation-validate" }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
missing_errors_doc = "allow"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
