# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "foundation-core"
version = "0.1.0"
description = "Core types for projectFOUNDATION: threads, targets, sources, tolerances"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
