# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "foundation-fetch"
version = "0.1.0"
description = "Manifest-driven data fetch with BLAKE3 content addressing"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
blake3.workspace = true
bytes.workspace = true
foundation-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ureq.workspace = true
walkdir.workspace = true

[features]
default = []
tls = ["ureq/rustls"]

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
