# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "foundation-ipc"
version = "0.1.0"
description = "Typed JSON-RPC clients for primal IPC — UDS-first capability discovery"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
foundation-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
toml.workspace = true
