# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "foundation-publish"
version = "0.1.0"
description = "sporePrint content generation — pseudoSpore gallery, evidence pages"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
foundation-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
