# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "foundation-validate"
version = "0.1.0"
description = "8-phase scientific validation pipeline for projectFOUNDATION"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
foundation-core.workspace = true
foundation-fetch.workspace = true
foundation-ipc.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
